# Artix

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  INSTALL.md  PLUGINS.md  SCHEMA.md
scripts/: generate-icon.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  fsops.rs  lib.rs  main.rs  models.rs
src-tauri/src/db/: mod.rs  repo.rs  repo_tests.rs  schema.sql
src/commands/: registry.ts
src/core/: celestial.ts  core.test.ts  events.ts  extract.ts  hash.ts  id.ts  index.ts  languages.ts  result.ts  session.ts  time.ts  types.ts
src/exporters/: context-bundle.ts  index.ts  json.ts  markdown.ts  registry.ts  types.ts
src/importers/: chatgpt.test.ts  chatgpt.ts  claude-jsonl.ts  copilot.test.ts  copilot.ts  index.ts  io.test.ts  json.ts  markdown.ts  perplexity.test.ts  perplexity.ts  registry.ts  text.ts  types.ts
src/plugins/: api.ts  host.ts  index.ts
src/renderer/: camera-rig.ts  controls.ts  galaxy-scene.ts  index.ts  layout.ts  quality.ts  renderer.test.ts  spatial-index.ts
src/search/: document.ts  engine.ts  fts.ts  fuzzy.ts  index.ts  inverted-index.ts  query-parser.ts  rank.ts  search.test.ts
src/services/: claude-code.test.ts  claude-code.ts  copilot-source.ts  dialogs.ts  folder-sync.test.ts  folder-sync.ts  resume.test.ts  resume.ts  session-hook.test.ts  session-hook.ts
src/state/: app.ts  library-store.ts  ui-store.ts
src/storage/: adapter.ts  demo-library.ts  index.ts  memory-adapter.ts  settings.ts  storage.test.ts  tauri-adapter.ts
(+27 files in other folders)
