[package]
name = "artix"
version = "0.1.1"
description = "Artix — local-first memory for Claude Code sessions"
authors = ["Artix contributors"]
edition = "2021"
rust-version = "1.77.2"
license = "MIT"

[lib]
# Tauri v2 splits the app into a library so `main.rs` stays a thin shim.
#
# The stock template also emits `staticlib` and `cdylib` here, which only the
# iOS/Android targets consume. Artix is desktop-only, nothing links those
# artifacts, and the `cdylib` exports every symbol in the Tauri stack — enough
# to overflow MinGW ld's PE export ordinal limit and break GNU-toolchain builds
# outright. Add them back alongside a mobile target if Artix ever grows one.
name = "artix_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
# Forwards a second `artix --sync` launch to the running instance, so the
# SessionEnd hook can trigger an instant sync without opening a second window.
tauri-plugin-single-instance = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# `bundled` compiles SQLite from source with FTS5, JSON1 and RTREE enabled,
# so Artix never depends on whatever SQLite the host OS happens to ship.
rusqlite = { version = "0.32", features = ["bundled", "backup", "functions"] }

thiserror = "2"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"

[features]
# Keeps `cargo build` honest about the default Tauri custom-protocol setup.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
